Model training and evaluation added

--- a/research/05_Model_evaluation.ipynb
+++ b/research/05_Model_evaluation.ipynb
@@ -17,7 +17,7 @@
     {
      "data": {
       "text/plain": [
-       "'d:\\\\Bappy\\\\YouTube\\\\Text-Summarizer-Project\\\\research'"
+       "'c:\\\\Users\\\\marni\\\\Desktop\\\\Text_summarization\\\\Text_summarization\\\\research'"
       ]
      },
      "execution_count": 2,
@@ -46,7 +46,7 @@
     {
      "data": {
       "text/plain": [
-       "'d:\\\\Bappy\\\\YouTube\\\\Text-Summarizer-Project'"
+       "'c:\\\\Users\\\\marni\\\\Desktop\\\\Text_summarization\\\\Text_summarization'"
       ]
      },
      "execution_count": 4,
@@ -83,8 +83,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from textSummarizer.constants import *\n",
-    "from textSummarizer.utils.common import read_yaml, create_directories"
+    "from textsummarization.constants import *\n",
+    "from textsummarization.utils.common import read_yaml, create_directories"
    ]
   },
   {
@@ -125,9 +125,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\marni\\anaconda3\\envs\\textvenv\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2024-08-07 19:07:15,710: INFO: config: PyTorch version 2.4.0 available.]\n"
+     ]
+    }
+   ],
    "source": [
     "from transformers import AutoModelForSeq2SeqLM, AutoTokenizer\n",
     "from datasets import load_dataset, load_from_disk, load_metric\n",
@@ -138,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +216,7 @@
     "\n",
     "        rouge_names = [\"rouge1\", \"rouge2\", \"rougeL\", \"rougeLsum\"]\n",
     "  \n",
-    "        rouge_metric = load_metric('rouge')\n",
+    "        rouge_metric = load_metric('rouge', trust_remote_code=True)\n",
     "\n",
     "        score = self.calculate_metric_on_test_ds(\n",
     "        dataset_samsum_pt['test'][0:10], rouge_metric, model_pegasus, tokenizer, batch_size = 2, column_text = 'dialogue', column_summary= 'summary'\n",
@@ -217,33 +233,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2023-05-18 20:14:03,142: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2023-05-18 20:14:03,151: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2023-05-18 20:14:03,153: INFO: common: created directory at: artifacts]\n",
-      "[2023-05-18 20:14:03,155: INFO: common: created directory at: artifacts/model_evaluation]\n"
+      "[2024-08-07 19:08:33,812: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2024-08-07 19:08:33,815: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2024-08-07 19:08:33,817: INFO: common: created directory at: artifacts]\n",
+      "[2024-08-07 19:08:33,818: INFO: common: created directory at: artifacts/model_evaluation]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\bokti\\AppData\\Local\\Temp\\ipykernel_25280\\2973449339.py:59: FutureWarning: load_metric is deprecated and will be removed in the next major version of datasets. Use 'evaluate.load' instead, from the new library 🤗 Evaluate: https://huggingface.co/docs/evaluate\n",
-      "  rouge_metric = load_metric('rouge')\n",
-      "100%|██████████| 5/5 [03:54<00:00, 46.91s/it]"
+      "100%|██████████| 5/5 [05:05<00:00, 61.06s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2023-05-18 20:18:18,394: INFO: rouge_scorer: Using default tokenizer.]\n"
+      "[2024-08-07 19:13:44,007: INFO: rouge_scorer: Using default tokenizer.]\n"
      ]
     },
     {
@@ -262,6 +276,90 @@
     "    model_evaluation_config.evaluate()\n",
     "except Exception as e:\n",
     "    raise e"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from transformers import pipeline, set_seed\n",
+    "from transformers import AutoModelForSeq2SeqLM, AutoTokenizer\n",
+    "\n",
+    "\n",
+    "\n",
+    "dataset_samsum_pt = load_from_disk(\"artifacts/data_transformation/samsum_dataset\")\n",
+    "tokenizer = AutoTokenizer.from_pretrained(\"artifacts/model_trainer/tokenizer\")\n",
+    "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+    "model_pegasus = AutoModelForSeq2SeqLM.from_pretrained(\"artifacts/model_trainer/pegasus-samsum-model\").to(device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Your max_length is set to 128, but your input_length is only 122. Since this is a summarization task, where outputs shorter than the input are typically wanted, you might consider decreasing max_length manually, e.g. summarizer('...', max_length=61)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dialogue:\n",
+      "Hannah: Hey, do you have Betty's number?\n",
+      "Amanda: Lemme check\n",
+      "Hannah: <file_gif>\n",
+      "Amanda: Sorry, can't find it.\n",
+      "Amanda: Ask Larry\n",
+      "Amanda: He called her last time we were at the park together\n",
+      "Hannah: I don't know him well\n",
+      "Hannah: <file_gif>\n",
+      "Amanda: Don't be shy, he's very nice\n",
+      "Hannah: If you say so..\n",
+      "Hannah: I'd rather you texted him\n",
+      "Amanda: Just text him 🙂\n",
+      "Hannah: Urgh.. Alright\n",
+      "Hannah: Bye\n",
+      "Amanda: Bye bye\n",
+      "\n",
+      "Reference Summary:\n",
+      "Hannah needs Betty's number but Amanda doesn't have it. She needs to contact Larry.\n",
+      "\n",
+      "Model Summary:\n",
+      "Amanda: Ask Larry Amanda: He called her last time we were at the park together .<n>Hannah: I'd rather you texted him .<n>Amanda: Just text him .\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Prediction\n",
+    "\n",
+    "gen_kwargs = {\"length_penalty\": 0.8, \"num_beams\":8, \"max_length\": 128}\n",
+    "\n",
+    "\n",
+    "\n",
+    "sample_text = dataset_samsum_pt[\"test\"][0][\"dialogue\"]\n",
+    "\n",
+    "reference = dataset_samsum_pt[\"test\"][0][\"summary\"]\n",
+    "\n",
+    "pipe = pipeline(\"summarization\", model=model_pegasus,tokenizer=tokenizer)\n",
+    "\n",
+    "## \n",
+    "print(\"Dialogue:\")\n",
+    "print(sample_text)\n",
+    "\n",
+    "\n",
+    "print(\"\\nReference Summary:\")\n",
+    "print(reference)\n",
+    "\n",
+    "\n",
+    "print(\"\\nModel Summary:\")\n",
+    "print(pipe(sample_text, **gen_kwargs)[0][\"summary_text\"])"
    ]
   },
   {
@@ -288,7 +386,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.8.19"
   },
   "orig_nbformat": 4
  },
