--- a/research/01_data_ingestion.ipynb
+++ b/research/01_data_ingestion.ipynb
@@ -223,6 +223,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GPU is not available, using CPU\n",
+      "PyTorch Version: 2.4.0+cpu\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "\n",
+    "def check_gpu():\n",
+    "    if torch.cuda.is_available():\n",
+    "        print(\"GPU is available\")\n",
+    "        print(f\"GPU Device Name: {torch.cuda.get_device_name(0)}\")\n",
+    "        print(f\"Number of GPUs: {torch.cuda.device_count()}\")\n",
+    "        \n",
+    "        # Additional CUDA information\n",
+    "        print(f\"CUDA Version: {torch.version.cuda}\")\n",
+    "        print(f\"cuDNN Version: {torch.backends.cudnn.version()}\")\n",
+    "        print(f\"Is cuDNN Enabled: {torch.backends.cudnn.enabled}\")\n",
+    "    else:\n",
+    "        print(\"GPU is not available, using CPU\")\n",
+    "        print(f\"PyTorch Version: {torch.__version__}\")\n",
+    "\n",
+    "# Run the check\n",
+    "check_gpu()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -245,7 +280,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.8.19"
   },
   "orig_nbformat": 4
  },
